@@ -1,24 +1,10 @@
 <?php
+
 #	IMDB Libraries
-require_once __DIR__ . '/class/imdbphp/Psr/Log/LoggerInterface.php';
-require_once __DIR__ . '/class/imdbphp/Psr/SimpleCache/CacheInterface.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/Exception.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/Exception/Http.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/Config.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/Logger.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/Cache.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/Request.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/Pages.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/MdbBase.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/Charts.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/Parsing.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/Person.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/PersonSearch.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/Title.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/TitleSearch.php';
-require_once __DIR__ . '/class/imdbphp/Imdb/TitleSearchAdvanced.php';
+require_once __DIR__ . '/class/bootstrap_imdbphp.php';
+
 #	Lumiere Libraries
 require_once __DIR__ . '/class/class.config.php';
 require_once __DIR__ . '/class/class.lumiere.php';
+require_once __DIR__ . '/class/class.widget.php';
 require_once __DIR__ . '/class/functions.php';
-require_once __DIR__ . '/class/widget.php';
